# whisper-fst-hf

./: .gitignore  AGENTS.md  pyproject.toml
configs/: correction.yaml  hf-real.yaml  hf.yaml
data/: correction_rules.csv  correction_rules_seed.csv  correction_rules_seed_v2.sample.csv  label_parser_cases.sample.jsonl  pair_candidates.sample.csv  pair_review_schema.csv
docs/: CHANGELOG.md  index.md  status.md  wbs-2.0-real-hf-dataset.md  wbs.md
docs/assets/: aig_domain_data_context.md  whisper_wfst_composition_research.md
docs/ops/: coding-conventions.md  environment.md  evaluation.md  (+4 more)
scripts/: archive_project_snapshot.py  audit_label_formats.py  audit_pair_sources.py  audit_rule_sources.py  evaluate_corrections.py  extract_hf_nbest.py  extract_real_hf_nbest.py  inventory_audio_text_sources.py  inventory_srt_runs.py  mine_misrecognition_pairs.py  probe_fst_backend.py  probe_targetability.py  run_calibration.py  run_offline_pipeline.py
tests/: test_archive_project_snapshot.py  test_artifact_io.py  test_calibration.py  test_composition.py  test_correction_wfst.py  test_domain_gating.py  test_evaluate.py  test_evaluation_manifest.py  test_fst_backend_smoke.py  test_hf_extractor.py  test_label_parser.py  test_margin.py  test_nbest_acceptor.py  test_offline_pipeline.py  test_overlapping_rules.py  test_pair_mining.py  test_pair_review.py  test_protected_spans.py  test_real_hf_extraction.py  test_rule_io.py  test_rule_source_audit.py  test_scaffold.py  test_source_inventory.py  test_srt_inventory.py  test_targetability_probe.py  test_trace.py  test_unicode.py
(+114 files in other folders)
